# MCP-TOOLS

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  TODO.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
config/: default.toml
config/certs/: multitool.crt  multitool.key
data/outbox/: dlq.jsonl
docs/: README.md  metrics.md
docs/architecture/: mcp-multi-tool.md
docs/contracts/: README.md  call-result.schema.json  call-trace.schema.json  inspection-run-event.schema.json  probe-result.schema.json
docs/examples/real-world/: report.json  report.md
docs/howto/: onboarding.md  real-world-e2e.md
docs/quality/: crash-harness.md  race-testing.md  security-baseline.md
mcp_inspector/: Cargo.toml
mcp_inspector/src/domain/: run.rs
mcp_inspector/src/infra/: config.rs  metrics.rs
mcp_inspector/tests/: interop.rs
tools/mcp-multi-tool/: Cargo.toml
tools/mcp-multi-tool/src/: lib.rs  main.rs
tools/mcp-multi-tool/src/adapters/: server.rs
tools/mcp-multi-tool/src/app/: compliance.rs  error_budget.rs  inspector_service.rs  mod.rs  registry.rs
tools/mcp-multi-tool/src/domain/: run.rs
tools/mcp-multi-tool/src/infra/: config.rs  metrics.rs  mod.rs  outbox.rs
tools/mcp-multi-tool/src/shared/: idempotency.rs  mod.rs  types.rs  utils.rs
tools/mcp-multi-tool/tests/: architecture.rs  compliance.rs  crash_harness.rs  error_budget.rs  harness.rs  help.rs  idempotency.rs  interop.rs  lock_wait.rs  release_track.rs
tools/mock-mcp-server/: Cargo.toml
tools/mock-mcp-server/src/: main.rs
