[package]
name = "mcp_multi_tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-multi-tool"
path = "src/main.rs"

[[bin]]
name = "compliance"
path = "src/bin/compliance.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
prometheus = "0.13"
once_cell = "1"
parking_lot = "0.12"
rmcp = { version = "=0.8.1", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest"
] }
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "json", "tokio"] }
hyper = { version = "1", features = ["full"] }
http = "1"
serde_with = "3"
tokio-util = "0.7"
time = { version = "0.3", features = ["macros", "formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
which = "6"
dotenvy = "0.15"
shell-words = "1.1"
schemars = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
rstest = "0.22"
assert_cmd = "2"
