[package]
name = "mock_mcp_server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
rmcp = { version = "=0.8.1", features = [
    "server",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session"
] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-util = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
